# nwb-guide

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  LICENSE  README.md  commoners.config.js  commoners.config.ts  debian.json  electron.vite.config.js  generateInterfaceSchema.py  guide.html  guideGlobalMetadata.json  guide_testing_suite.yml  index.html  main.js  manualActions.json  notarize.js  nwb-guide-windows.spec  nwb-guide.spec  package-lock.json  package.json  paths.config.json  preload.js  prepare_pyinstaller_spec.py  prettier.config.js  pyproject.toml  pytest.ini  requirements-rtd.txt  script.json  shortcuts.js  splash-screen.html  sse.py  testExecutable.js  tsconfig.json  vite.config.js  vite.config.ts
.github/: CODE_OF_CONDUCT.rst
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md  feature_request.yml  report-issue.md  report-issue.yml
.github/workflows/: Build-and-deploy-linux.yml  Build-and-deploy-mac.yml  (+28 more)
.storybook/: main.js  main.ts  manager.js  preview-head.html  preview.js
assets/: blackfynn-warning-message.txt  demo-btns.js  imports.js  lotties.js  nav.js
backend/: app.py
coverage/: block-navigation.js  clover.xml  coverage-final.json  index.html  prettify.js  sorter.js
docs/: Makefile  conf.py  conf_extlinks.py  developer_guide.rst  format_support.rst  index.rst  installation.rst  requirements-rtd.txt  support.rst  user_guide.rst
environments/: environment-Linux.yml  environment-MAC-apple-silicon.yml  environment-MAC-arm64.yml  environment-MAC-intel.yml  environment-MAC.yml  environment-Windows.yml
frontend/: globals.js  index.js  loadHTMLAsynchronously.js  nav.js  renderer.js  vanilla.js
plugins/: application-menu.js  index.ts
pyflask/: app.py  sse.py
schemas/: backend-configuration.schema.ts  base-metadata.schema.ts  base_metadata_schema.json  dandi-create.schema.ts  dandi-upload.schema.ts  interfaces.info.ts  project-metadata.schema.json  project-metadata.schema.ts  source-data.schema.ts  subject.schema.ts
scripts/: globals.js
src/: components.js  example_pipelines.yml  globals.js  index.js  index.ts  links.js  loadHTML.js  nav.js  pages.js  paths.config.json  progress.js  promises.ts  renderer.js  shell-commands.js  splash-screen.html  supported_interfaces.json
stories/: Pages.stories.js
templates/: index.html
tests/: commoners.ts  data.ts  e2e.test.ts  globals.ts  metadata.test.ts  progress.test.ts  puppeteer.ts  schemas.test.ts  testPyinstallerExecutable.js  utils.test.ts  utils.ts
(+936 files in other folders)
